Added OAuth functionality
